Spec for /projects/users/{userId}
